--- a/src/components/ColorPicker/Swatch/swatch.css
+++ b/src/components/ColorPicker/Swatch/swatch.css
@@ -2,13 +2,45 @@
     width: var(--swatch-size);
     height: var(--swatch-size);
 
-    border: 3px solid #999;
+    --border-col: #ddd;
+
+    border: 3px solid var(--border-col);
     border-radius: 3px;
 
     touch-action: none;
     user-select: none;
 }
 
+.swatch.eraser{
+    border-style: dashed;
+
+    --stripe-width: 4px;
+    
+    background-image: 
+        repeating-linear-gradient(
+            45deg, 
+            transparent 0 var(--stripe-width), 
+            #ddd var(--stripe-width) calc(2* var(--stripe-width)));
+}
+
 .swatch.selected{
-    border-color: #ddd;
+    --border-col: #999;  
+}
+
+.swatch:active{
+    animation: pop 0.1s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0s 1 forwards;
+}
+
+@keyframes pop {
+    0%{
+        transform: scale(1);
+    }
+
+    90%{
+        transform: scale(1.2);
+    }
+
+    100%{
+        transform: scale(1);
+    }
 }
