--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+:root{
+    font-size: 12px;
+    --main-text-color: #444;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -14,4 +19,13 @@
     grid-template-columns: 1fr;
 
     row-gap: 10px;
+    color: var(--main-text-color);   
+}
+
+label{
+    font-size: 1rem;
+}
+
+#size-slider+label{
+    text-align: center;
 }
