--- a/src/components/ColorPicker/Swatch/swatch.css
+++ b/src/components/ColorPicker/Swatch/swatch.css
@@ -6,9 +6,13 @@
 
     border: 3px solid var(--border-col);
     border-radius: 3px;
-
+    
     touch-action: none;
     user-select: none;
+
+    transition:transform 200ms cubic-bezier(0.075, 0.82, 0.165, 1);
+    
+    transform: scale(1);
 }
 
 .swatch.eraser{
@@ -28,19 +32,6 @@
 }
 
 .swatch:active{
-    animation: pop 0.1s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0s 1 forwards;
-}
-
-@keyframes pop {
-    0%{
-        transform: scale(1);
-    }
-
-    90%{
-        transform: scale(1.2);
-    }
-
-    100%{
-        transform: scale(1);
-    }
+    transform: scale(1.25);
+    transition-duration: 50ms;
 }
