--- a/src/components/LoadingMessage/LoadingMessage.css
+++ b/src/components/LoadingMessage/LoadingMessage.css
@@ -20,11 +20,12 @@
 
     opacity: 0;
     
+    pointer-events: none;
+    touch-action: none;
 }
 
 .loading-message.loading{
 
     transition-duration: 0s;
-    opacity: 1;
-    pointer-events: none;
+    opacity: 1;    
 }
