--- a/src/components/LoadingScreen/LoadingScreen.css
+++ b/src/components/LoadingScreen/LoadingScreen.css
@@ -6,15 +6,16 @@
     left: 0;
 
     display: flex;
+    flex-direction: column;
     flex: 1;
     align-items: center;
     justify-content: center;
-    font-size: 2rem;
+    font-size: 1rem;
+    text-align: center;
 
-    background-color: #f44;
-    color: #fff;
+    background-color: #8882;
+    color: #222;
     z-index: 1000;
-
     
     transition: opacity 1s cubic-bezier(0.075, 0.82, 0.165, 1) 0s;
 
@@ -22,10 +23,16 @@
     
     pointer-events: none;
     touch-action: none;
+    padding: 25%;
 }
 
 .loading-message.loading{
 
     transition-duration: 0s;
     opacity: 1;    
+    
+}
+
+.loading-message:not(.loading) svg{
+    visibility: hidden;
 }
