--- a/src/components/LoadingScreen/LoadingScreen.css
+++ b/src/components/LoadingScreen/LoadingScreen.css
@@ -1,6 +1,7 @@
 .loading-message{
     --transition-dur: 0.5s;
     --transition-del: 0.5s;
+    --transition-del: 1s;
 
     position: absolute;
     top: 0;
@@ -13,8 +14,12 @@
     flex: 1;
     align-items: center;
     justify-content: center;
-    font-size: 1rem;
     text-align: center;
+
+    row-gap: 0.5em;
+
+    font-size: 1rem;
+    
 
 
     /* copy canvas border */
@@ -23,9 +28,14 @@
 
     /* background-color: #8882; */
 
-    background-color: #fafafa;
+    /* background-color: #fafafa; */
 
-    color: #222;
+    --cola: #ddd8;
+    --colb: #ddd2
+    background-image: radial-gradient(var(--cola) 0, var(--cola) 50%, var(--colb) 100%);
+
+
+    color: #888;
     z-index: 1000;
     
     transition: opacity var(--transition-dur) cubic-bezier(0.075, 0.82, 0.165, 1) var(--transition-del);
@@ -34,7 +44,6 @@
     
     pointer-events: none;
     touch-action: none;
-    padding: 25%;
 }
 
 .loading-message.loading{
@@ -46,8 +55,11 @@
     --transition-dur: 0.25s;
     visibility: visible;
     opacity: 1;
-    transition: opacity var(--transition-dur) cubic-bezier(0.075, 0.82, 0.165, 1) var(--transition-del), visibility 0s linear calc(var(--transition-dur) + var(--transition-del));
+    transition: opacity var(--transition-dur) cubic-bezier(0.075, 0.82, 0.165, 1) var(--transition-del), visibility 0s linear calc(var(--transition-dur) + var(--transition-del));    
+
+    width: 36%;
 }
+
 
 .loading-message:not(.loading) svg{
     opacity: 0;
