--- a/src/routes/settings/settings.module.css
+++ b/src/routes/settings/settings.module.css
@@ -91,6 +91,9 @@ span.header::after{
     
 }
 
+
+/* FIXME - weird text thickness on ios save button */
+
 .save{
     background-color: #8e4;
     color: #444;
